src/objects/Apttus_Config2__GLAccountMapEntry__c.object
<CustomObject>
    <description>Represents a single entry in a G/L account map rule</description>
    <fields>
        <fullName>Apttus_Config2__Dimension1Value__c</fullName>
        <description>The value for the first dimension.</description>
        <inlineHelpText>The value for the first dimension.</inlineHelpText>
        <label>Dimension 1 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension2Value__c</fullName>
        <description>he value for the second dimension</description>
        <inlineHelpText>he value for the second dimension</inlineHelpText>
        <label>Dimension 2 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Dimension3Value__c</fullName>
        <description>The value for the third dimension</description>
        <inlineHelpText>The value for the third dimension</inlineHelpText>
        <label>Dimension 3 Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GLAccountId__c</fullName>
        <description>The base G/L account Id</description>
        <inlineHelpText>The base G/L account Id</inlineHelpText>
        <label>G/L Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GLAccountName__c</fullName>
        <description>The G/L account name</description>
        <inlineHelpText>The G/L account name</inlineHelpText>
        <label>G/L Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__GLAccountNumber__c</fullName>
        <description>The G/L account number</description>
        <inlineHelpText>The G/L account number</inlineHelpText>
        <label>G/L Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MapRuleId__c</fullName>
        <description>ID of the associated mapping rule</description>
        <inlineHelpText>ID of the associated map rule</inlineHelpText>
        <label>Map Rule</label>
        <referenceTo>Apttus_Config2__GLAccountMapRule__c</referenceTo>
        <relationshipLabel>Entries</relationshipLabel>
        <relationshipName>MapEntries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The rule entry sequence</description>
        <inlineHelpText>The rule entry sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>G/L Account Map Entry</label>
    <nameField>
        <displayFormat>RE-{00000}</displayFormat>
        <label>Rule Entry Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>G/L Account Map Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>